repair overflow head titles!

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -17471,7 +17471,7 @@ canvas {
 !no puse usar @use creo q hay algun tema con bootstrap
 si intento usarlo desaparecen las variables de bootstrap quedan indefeinidas */
 .font-size-4rem {
-  font-size: min(4rem, 14vw);
+  font-size: min(4rem, 12vw);
 }
 
 .bg-home {
