--- a/src/assets/scss/utils/_utilities.scss
+++ b/src/assets/scss/utils/_utilities.scss
@@ -6,7 +6,7 @@ si intento usarlo desaparecen las variables de bootstrap quedan indefeinidas */
 
 // font size
 .font-size-4rem {
-    font-size: min(4rem, 14vw);
+    font-size: min(4rem, 12vw);
 }
 
 
